k8s/homolog/rate-limit-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-mybitcoin-api-homolog
  namespace: default
spec:
  rateLimit:
    average: 20
    burst: 10
    period: 1m
    sourceCriterion:
      ipStrategy:
        depth: 1
