k8s/homolog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybitcoin-api-homolog
  labels:
    app: mybitcoin-api-homolog
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: mybitcoin-api-homolog
  template:
    metadata:
      labels:
        app: mybitcoin-api-homolog
    spec:
      containers:
        - name: mybitcoin-api-homolog
          image: paulohsv/mybitcoin-api:homolog-latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
