k8s/homolog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybitcoin-api-homolog
  labels:
    app: mybitcoin-api-homolog
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: mybitcoin-api-homolog
